# axum-static-file-server-spa

./: Cargo.toml  README.md
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Navbar.tsx  Sidebar.tsx  index.ts
frontend/src/pages/: About.tsx  Home.tsx  NotFound.tsx  index.ts
frontend/src/store/: index.ts
src/: main.rs
